// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-chip should render with custom props 1`] = `
<modus-wc-chip active="true" aria-label="Custom chip" custom-class="test-class" size="lg" variant="outline">
  <!---->
  <button aria-label="chip" class="modus-wc-btn modus-wc-btn-lg modus-wc-chip modus-wc-chip--active modus-wc-chip--outline test-class" tabindex="0" type="button">
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with default props 1`] = `
<modus-wc-chip aria-label="Default chip">
  <!---->
  <button aria-label="chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip" tabindex="0" type="button">
  </button>
</modus-wc-chip>
`;
